--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
   <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Zigmus-недвижимость</h1>
-  <p>test</p>
+  <header>
+    <div class="container">
+      <div class="top">
+        <div class="logo"><a href="/"> <img src="./img/logo.svg"></a></div>
+        <ul class="top-menu">
+          <li class="top-menu-item"><a href="#">Купить</a></li>
+          <li class="top-menu-item"><a href="#">Арендовать</a></li>
+          <li class="top-menu-item"><a href="#">Новостройки</a></li>
+          <li class="top-menu-item"><a href="#">Коммерческая</a></li>
+          <li class="top-menu-item"><a href="#">Ещё</a></li>
+        </ul>
+        <div class="place">Варшава</div>
+        <div class="dropdown">
+          <button class="btn btn-green info">Разместить объявление</button>
+        </div>
+        <div class="top-icon-wrapper">
+          <div class="search top-icon"><img src="./img/search.svg"></div>
+          <div class="like top-icon"><img src="./img/like.svg"></div>
+          <div class="bell top-icon"><img src="./img/bell.svg"></div>
+          <div class="person top-icon"><img src="./img/person.svg"></div>
+        </div>
+      </div>
+    </div>
+  </header>
 </body>
