--- a/index.html
+++ b/index.html
@@ -30,4 +30,15 @@
       </div>
     </div>
   </header>
+  <main>
+    <div class="container">
+      <div class="main">
+        <div class="main-left">
+          <h2>Найдите жильё мечты</h2>
+          <p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому</p>
+        </div>
+        <div class="main-right"><img src="./img/interior-modern-design-room-3d-illustration-P8767RS 1.png"></div>
+      </div>
+    </div>
+  </main>
 </body>
