--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
           <p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому</p>
         </div>
         <div class="main-right"><img src="./img/interior-modern-design-room-3d-illustration-P8767RS 1.png"></div>
+        <div class="main-tabs">
+          <ul class="nav-tabs">
+            <li class="tab-item"><a class="tab" href="#">Купить</a></li>
+            <li class="tab-item"><a class="tab" href="#">Арендовать</a></li>
+            <li class="tab-item"><a class="tab" href="#">Посуточно</a></li>
+            <li class="tab-item"><a class="tab" href="#">Новостройки</a></li>
+          </ul>
+          <div class="tab-content"></div>
+        </div>
       </div>
     </div>
   </main>
