--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
             <li class="tab-item"><a class="tab" href="#">Посуточно</a></li>
             <li class="tab-item"><a class="tab" href="#">Новостройки</a></li>
           </ul>
-          <div class="tab-content"></div>
+          <div class="tab-content">
+            <select>
+              <option>Квартиру</option>
+              <option>Загородный дом</option>
+            </select>
+          </div>
         </div>
       </div>
     </div>
